--- a/variables/errors/404.html
+++ b/variables/errors/404.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
-    <link rel="stylesheet" href="../css/errors.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>404 – Page Not Found</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #fefefe;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    img {
+      max-width: 400px;
+      width: 90%;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin: 10px 0 30px;
+      color: #666;
+    }
+
+    a {
+      text-decoration: none;
+      color: #fff;
+      background-color: #222;
+      padding: 12px 24px;
+      border-radius: 30px;
+      transition: background-color 0.3s ease;
+    }
+
+    a:hover {
+      background-color: #444;
+    }
+  </style>
 </head>
 <body>
-    <img src="../img/error_img/404.jpg" alt="Not Found">
-    <h1>404 - Not Found</h1>
+  <img src="../img/error_img/404.jpg" alt="Funny dog watching TV in robe">
+  <h1>404 – You Lost, Buddy? 🤔</h1>
+  <p>This page doesn’t exist, woof sorry</p>
+  <a href="/">Back to safety</a>
 </body>
 </html>
