CGI script not working and need to check if we can do the handle CGI thing

--- a/variables/www/index.html
+++ b/variables/www/index.html
@@ -74,6 +74,7 @@
   <div class="button-group">
     <a href="/blog" class="button">Blog</a>
     <a href="/gallery" class="button">Dog Gallery</a>
+    <a href="/cgi-bin" class="button">Time</a>
     <a href="/about" class="button">About</a>
     <a href="/contact" class="button">Contact</a>
   </div>
