POST works need to work on DELETE

--- a/variables/www/index.html
+++ b/variables/www/index.html
@@ -72,11 +72,9 @@
   <p>Choose where you want to go:</p>
 
   <div class="button-group">
-    <a href="/blog" class="button">Blog</a>
-    <a href="/gallery" class="button">Dog Gallery</a>
+    <a href="/blog" class="button">Upload</a>
+    <a href="/delete" class="button">Delete</a>
     <a href="/time" class="button">Time</a>
-    <a href="/about" class="button">About</a>
-    <a href="/contact" class="button">Contact</a>
   </div>
 
   <footer>
