--- a/data/www/index.html
+++ b/data/www/index.html
@@ -74,7 +74,7 @@
   <div class="button-group">
     <a href="/blog" class="button">Upload</a>
     <a href="/delete" class="button">Delete</a>
-    <a href="/time" class="button">Time</a>
+    <a href="/cgi-bin/time.py" class="button">Time</a>
   </div>
 
   <footer>
