Clean version ready to be merged to the main or replace

--- a/variables/index.html
+++ b/variables/index.html
@@ -75,7 +75,7 @@
   <div class="button-group">
     <a href="/blog" class="button">Upload</a>
     <a href="/delete" class="button">Delete</a>
-    <a href="/time.py" class="button">Time</a>
+    <a href="/cgi-bin/time.py" class="button">Time</a>
   </div>
 
   <footer>
