--- a/variables/forms/upload_test.html
+++ b/variables/forms/upload_test.html
@@ -9,7 +9,7 @@
     <h1>Upload a File</h1>
     
     <!-- File upload form -->
-    <form action="/uploads" method="POST" enctype="multipart/form-data">
+    <form action="/cgi-bin/upload_form.py" method="POST" enctype="multipart/form-data">
         <label for="file">Choose a file to upload:</label>
         <input type="file" id="file" name="file">
         
